# LP_SW

./: .gitignore  Makefile  comport_sel.mk  sdkconfig
common/: ilda.h  ilda_file.c  proto.h
common/ilda_anlz_test/: Makefile  anlz.c
common/ilda_anlz_test2/: Makefile  anlz.c
esp32/: CMakeLists.txt  Makefile  comport_sel.mk  sdkconfig  sdkconfig.old
esp32/ilda_anlz_test/: Makefile  ilda_file.c
esp32/ilda_anlz_test2/: anlz.c
esp32/main/: CMakeLists.txt  error.c  error.h  ilda_playground.c  main.c  proto_l0.h  proto_l1.c  safety.c  safety.h  sd_card.h
esp32/main/comm/: cobs.c  cobs.h  proto_l0.c  serial.c  serial.h
esp32/main/components/: hw.c  hw.h
esp32/main/laser/: hl_irq.S  ilda.h  lp.c  lp.h  lp_hw.h
esp32/main/laser/gamma_gen/: g.c
esp32/main/web/: dns_server.c  lan.c  lan.h  lc_udp.c  lc_udp.h  wifi.c  ws.c
esp32/main/web/page/: index.html  index.js  package.json
ild_anlz/: Makefile  anlz.c  ilda_file.c
ilda_anlz_test/: anlz.c
ilda_anlz_test2/: Makefile
main/: accel.c  accel.h  buttons.c  buttons.h  component.mk  dev_drivers.c  dev_drivers.h  display.c  display.h  eth_smi_iic.c  eth_smi_iic.h  fan.c  hl_irq.S  hw.c  i2c_accel.c  i2c_accel.h  i2c_adc.c  i2c_adc.h  i2c_exp.c  i2c_exp.h  i2c_fram.c  ilda.h  ilda_playground.c  ilda_playground.h  lp.c  lp.h  main.c  safety.c  safety.h  sd_card.c  sd_card.h  spi_master_nodma.c  spi_master_nodma.h  ui.c  ui.h
main/components/: fan.h  hw.c  i2c_accel.c  i2c_accel.h  i2c_adc.c  i2c_adc.h  i2c_display.c  i2c_exp.c  i2c_fram.c  i2c_fram.h  lp_config.h
main/laser/: hl_irq.S  (+3 more)
stm/: Makefile
(+76 files in other folders)
